feat: task submit with script
