# openapi.yaml
@@ -943,6 +943,18 @@ components:
         log:
           type: string
           example: test log content
+    SubmitTaskTest:
+      type: object
+      required:
+        - name
+        - script
+      properties:
+        name:
+          type: string
+          example: test-1
+        script:
+          type: string
+          example: test.sh
     RequestSubmitTask:
       type: object
       required:
@@ -952,10 +964,7 @@ components:
         tests:
           type: array
           items:
-            type: string
-          example:
-            - test-1
-            - test-2
+            $ref: '#/components/schemas/SubmitTaskTest'
         nfPrList:
           type: array
           items:
